tests/spec/emit/snapshots/typed_function_alias_from_named_function_declares_alias_type.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  type Handler = fn() -> int
  
  fn make_handler() -> int { 1 }
  
  fn use_ref(r: Ref<Handler>) -> int {
    r.*()
  }
  
  fn test() -> int {
    let h: Handler = make_handler
    use_ref(&h)
  }
---
package main

type Handler func() int

func makeHandler() int {
	return 1
}

func useRef(r *Handler) int {
	return (*r)()
}

func test() int {
	var h Handler = makeHandler
	return useRef(&h)
}
