tests/spec/emit/snapshots/typed_let_loop_interface_declares_annotated_type.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Printable {
    fn text(self) -> string
  }
  
  struct A {}
  struct B {}
  
  impl A { fn text(self) -> string { "a" } }
  impl B { fn text(self) -> string { "b" } }
  
  fn test() {
    let mut p: Printable = loop {
      break A {}
    }
    p = B {}
    let _ = p
  }
---
package main

type Printable interface {
	text() string
}

type A struct{}

type B struct{}

func (a A) text() string {
	return "a"
}

func (b B) text() string {
	return "b"
}

func test() {
	var p Printable
	for {
		p = A{}
		break
	}
	p = B{}
	_ = p
}
