tests/spec/emit/snapshots/typed_let_propagate_interface_declares_annotated_type.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Printable {
    fn text() -> string
  }
  
  struct A {}
  struct B {}
  
  impl A { fn text(self) -> string { "a" } }
  impl B { fn text(self) -> string { "b" } }
  
  fn make_a() -> Result<A, string> { Ok(A {}) }
  
  fn run() -> Result<(), string> {
    let mut p: Printable = make_a()?
    p = B {}
    let _ = p
    Ok(())
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Printable interface {
	text() string
}

type A struct{}

type B struct{}

func (a A) text() string {
	return "a"
}

func (b B) text() string {
	return "b"
}

func makeA() lisette.Result[A, string] {
	return lisette.MakeResultOk[A, string](A{})
}

func run() lisette.Result[struct{}, string] {
	var p Printable
	check := makeA()
	if check.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[struct{}, string](check.ErrVal)
	}
	p = check.OkVal
	p = B{}
	_ = p
	return lisette.MakeResultOk[struct{}, string](struct{}{})
}
