tests/spec/emit/snapshots/ufcs_address_of_receiver_parens.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Counter { x: int }
  
  impl Counter {
    fn inc(self: mut Ref<Counter>) -> int {
      self.x = self.x + 1
      self.x
    }
  }
  
  fn main() {
    let mut c = Counter { x: 0 }
    let _ = Counter.inc(&c)
  }
---
package main

type Counter struct {
	x int
}

func (c *Counter) inc() int {
	c.x++
	return c.x
}

func main() {
	c := Counter{x: 0}
	c.inc()
}
