tests/spec/emit/snapshots/ufcs_address_of_struct_literal_receiver.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Counter { x: int }
  
  impl Counter {
    fn inc(self: mut Ref<Counter>) -> int {
      self.x = self.x + 1
      self.x
    }
  }
  
  fn main() {
    let _ = Counter.inc(&Counter { x: 0 })
  }
---
package main

type Counter struct {
	x int
}

func (c *Counter) inc() int {
	c.x++
	return c.x
}

func main() {
	(&Counter{x: 0}).inc()
}
