tests/spec/emit/snapshots/ufcs_call_private_keyword_method.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Box { x: int }
  
  impl Box {
    fn range(self) -> int { self.x }
    fn chan(self) -> int { self.x }
  }
  
  fn main() {
    let b = Box { x: 1 }
    let _ = Box.range(b)
    let _ = Box.chan(b)
  }
---
package main

type Box struct {
	x int
}

func (b Box) range_() int {
	return b.x
}

func (b Box) chan_() int {
	return b.x
}

func main() {
	b := Box{x: 1}
	b.range_()
	b.chan_()
}
