tests/spec/emit/snapshots/ufcs_call_receiver_eval_order_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Counter { n: int }
  
  impl Counter {
    fn get(self) -> int { self.n }
  }
  
  fn bump_and_get(c: mut Ref<Counter>) -> int {
    c.*.n = c.*.n + 1
    c.*.n
  }
  
  fn sum(a: int, b: int) -> int { a + b }
  
  fn main() {
    let mut c = Counter { n: 0 }
    let v = sum(c.get(), bump_and_get(&c))
    let _ = v
  }
---
package main

type Counter struct {
	n int
}

func (c Counter) get() int {
	return c.n
}

func bumpAndGet(c *Counter) int {
	c.n++
	return c.n
}

func sum(a, b int) int {
	return a + b
}

func main() {
	c := Counter{n: 0}
	v := sum(c.get(), bumpAndGet(&c))
	_ = v
}
