tests/spec/emit/snapshots/ufcs_call_return_only_type_args.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box<T> { value: T }
  
  impl<T> Box<T> {
    fn make<U>(self) -> U { panic("boom") }
  }
  
  fn main() {
    let b = Box { value: 1 };
    let x: string = b.make();
    let _ = x;
  }
---
package main

type Box[T any] struct {
	value T
}

func Box_make[T any, U any](_ Box[T]) U {
	panic("boom")
}

func main() {
	b := Box[int]{value: 1}
	x := Box_make[int, string](b)
	_ = x
}
