tests/spec/emit/snapshots/ufcs_call_to_public_snake_case_receiver_method.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  pub struct Service {}
  
  impl Service {
    pub fn get_session(self) -> int { 42 }
  }
  
  fn main() {
    let s = Service {};
    let _ = Service.get_session(s);
  }
---
package main

type Service struct{}

func (s Service) GetSession() int {
	return 42
}

func main() {
	s := Service{}
	s.GetSession()
}
